K8/cluster-infra/app-internal-gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: internal-http
spec:
  # Specify an existing GatewayClass.
  gatewayClassName: gke-l7-rilb
  listeners:
    # Listen for HTTP traffic on port 80.
    - name: http
      protocol: HTTP
      port: 80
